examples/test/testpolicy1116.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1116
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key33: value43
      key0: value15
      key26: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value12
          key26: value20
      podSelector:
        matchLabels:
          key4: value48
          key38: value43
          key15: value38
